--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.5.11   2015-04-05
+* support for recursive watches (Dan Fruehauf)
+
+
 0.5.10   2012-04-05
 * some includes fixed to build correctly with GCC 4.6 (and 4.4-4.5 - #0000385, #0000447)
 * some type issues fixed (#0000447)
